@@ -92,14 +92,14 @@ public class LegacyAggregationEngineTests extends AbstractAggregationEngineTestB
 		final List<IInvoiceHeader> invoices = invokeAggregationEngine(engine);
 		assertThat(invoices).as("We are expecting only one invoice: " + invoices).hasSize(1);
 
-		final IInvoiceHeader invoice = invoices.get(0);
+		final IInvoiceHeader invoice = invoices.getFirst();
 		assertThat(invoice.getDocBaseType()).as("Invalid DocBaseType").isEqualTo(InvoiceDocBaseType.CustomerInvoice);
 		validateInvoiceHeader("Invoice", invoice, ic1);
 
 		final List<IInvoiceLineRW> invoiceLines = getInvoiceLines(invoice);
 		assertThat(invoiceLines).as("We are expecting one invoice line per IC: " + invoiceLines).hasSize(3);
 
-		assertLineCorrect(invoiceLines.get(0));
+		assertLineCorrect(invoiceLines.getFirst());
 		assertLineCorrect(invoiceLines.get(1));
 		assertLineCorrect(invoiceLines.get(2));
 		// System.out.println(invoices);
@@ -156,14 +156,14 @@ public class LegacyAggregationEngineTests extends AbstractAggregationEngineTestB
 		final List<IInvoiceHeader> invoices = invokeAggregationEngine(engine);
 		assertThat(invoices).as("We are expecting only one invoice: " + invoices).hasSize(1);
 
-		final IInvoiceHeader invoice = invoices.get(0);
+		final IInvoiceHeader invoice = invoices.getFirst();
 		assertThat(invoice.getDocBaseType()).as("Invalid DocBaseType").isEqualTo(InvoiceDocBaseType.VendorInvoice);
 		validateInvoiceHeader("Invoice", invoice, ic1);
 
 		final List<IInvoiceLineRW> invoiceLines = getInvoiceLines(invoice);
 		assertThat(invoiceLines).as("We are expecting one invoice line per IC: " + invoiceLines).hasSize(3);
 
-		assertLineCorrect(invoiceLines.get(0));
+		assertLineCorrect(invoiceLines.getFirst());
 		assertLineCorrect(invoiceLines.get(1));
 		assertLineCorrect(invoiceLines.get(2));
 		// System.out.println(invoices);
@@ -206,14 +206,14 @@ public class LegacyAggregationEngineTests extends AbstractAggregationEngineTestB
 		final List<IInvoiceHeader> invoices = invokeAggregationEngine(engine);
 		assertThat(invoices).as("We are expecting only one invoice: " + invoices).hasSize(1);
 
-		final IInvoiceHeader invoice = invoices.get(0);
+		final IInvoiceHeader invoice = invoices.getFirst();
 		assertThat(invoice.getDocBaseType()).as("Invalid DocBaseType").isEqualTo(InvoiceDocBaseType.CustomerCreditMemo);
 		validateInvoiceHeader("Invoice", invoice, manualIc1);
 
 		final List<IInvoiceLineRW> invoiceLines = getInvoiceLines(invoice);
 		assertThat(invoiceLines).as("We are expecting only one invoice line: " + invoiceLines).hasSize(1);
 
-		final IInvoiceLineRW invoiceLine = invoiceLines.get(0);
+		final IInvoiceLineRW invoiceLine = invoiceLines.getFirst();
 		assertThat(invoiceLine.getPriceActual().toMoney().toBigDecimal()).as("Invalid PriceActual").isEqualByComparingTo("10");
 		assertThat(invoiceLine.getQtysToInvoice().getStockQty().toBigDecimal()).as("Invalid QtyToInvoice").isEqualByComparingTo("1");
 		assertThat(invoiceLine.getNetLineAmt().toBigDecimal()).as("Invalid NetLineAmt").isEqualByComparingTo("100"); // price=10 times qtyInUom=10
@@ -259,14 +259,14 @@ public class LegacyAggregationEngineTests extends AbstractAggregationEngineTestB
 		final List<IInvoiceHeader> invoices = invokeAggregationEngine(engine);
 		assertThat(invoices).as("We are expecting only one invoice: " + invoices).hasSize(1);
 
-		final IInvoiceHeader invoice = invoices.get(0);
+		final IInvoiceHeader invoice = invoices.getFirst();
 		assertThat(invoice.getDocBaseType()).as("Invalid DocBaseType").isEqualTo(InvoiceDocBaseType.VendorCreditMemo);
 		validateInvoiceHeader("Invoice", invoice, manualIc1);
 
 		final List<IInvoiceLineRW> invoiceLines = getInvoiceLines(invoice);
 		assertThat(invoiceLines).as("We are expecting only one invoice line: " + invoiceLines).hasSize(1);
 
-		final IInvoiceLineRW invoiceLine = invoiceLines.get(0);
+		final IInvoiceLineRW invoiceLine = invoiceLines.getFirst();
 		assertThat(invoiceLine.getPriceActual().toMoney().toBigDecimal()).as("Invalid PriceActual").isEqualByComparingTo("10");
 		assertThat(invoiceLine.getQtysToInvoice().getStockQty().toBigDecimal()).as("Invalid QtyToInvoice").isEqualByComparingTo("1");
 		assertThat(invoiceLine.getNetLineAmt().toBigDecimal()).as("Invalid NetLineAmt").isEqualByComparingTo("100"); // price=10 times qtyInUom=10
@@ -314,7 +314,7 @@ public class LegacyAggregationEngineTests extends AbstractAggregationEngineTestB
 			final List<IInvoiceHeader> invoices = invokeAggregationEngine(engine);
 			assertThat(invoices).as("We are expecting only one invoice: " + invoices).hasSize(1);
 
-			final IInvoiceHeader invoice = invoices.get(0);
+			final IInvoiceHeader invoice = invoices.getFirst();
 			assertThat(invoice.getDocBaseType()).as("Invalid DocBaseType").isEqualTo(X_C_DocType.DOCBASETYPE_ARInvoice);
 			validateInvoiceHeader("Invoice", invoice, ic1);
 
@@ -442,7 +442,7 @@ public class LegacyAggregationEngineTests extends AbstractAggregationEngineTestB
 			final List<IInvoiceHeader> invoices = engine.aggregate();
 			assertThat(invoices).as("RUN2 - We are expecting only one invoice: " + invoices).hasSize(1);
 
-			final IInvoiceHeader invoice = invoices.get(0);
+			final IInvoiceHeader invoice = invoices.getFirst();
 			assertThat(invoice.getDocBaseType()).as("RUN2 - Invalid DocBaseType").isEqualTo(X_C_DocType.DOCBASETYPE_ARInvoice);
 			final boolean invoiceReferencesOrder = false;
 			validateInvoiceHeader("Invoice", invoice, ic3, invoiceReferencesOrder);
