@@ -59,7 +59,7 @@ class AggregatedTUPackingInfo implements IHUPackingInfo
 					.getProductStorages();
 			if (productStorages.size() == 1)
 			{
-				return productStorages.get(0);
+				return productStorages.getFirst();
 			}
 			else
 			{
